# PhD_Buddy

./: .gitignore  README.md  environment.yml  pyproject.toml
airflow/dags/: phd_buddy_ingestion.py
docs/: ARCHITECTURE.md  PHDBUDDY_RAG_AGENT_DEV_PLAN.md
scripts/: run_airflow.sh
src/phd_buddy/: __init__.py  __main__.py  app.py  cli.py  onboarding.py  web.py
src/phd_buddy/jobs/: __init__.py  runner.py  tasks.py
src/phd_buddy/llm/: __init__.py  cache.py  router.py
src/phd_buddy/llm/harnesses/: deep_dive.md  summary.md  supportive_chat.md  task_decompose.md  weekly_plan.md
src/phd_buddy/llm/harnesses/idea_panel/: advisor_persona.md  industry_voice.md  senior_researcher.md  venue_reviewer.md
src/phd_buddy/notify/: __init__.py  channels.py
src/phd_buddy/routers/: __init__.py  agents.py  auth.py  checkin.py  digest.py  ideas.py  jobs.py  library.py  profile.py  reading.py  research.py  schedule.py  support.py  tasks.py
src/phd_buddy/services/: __init__.py  acquisition.py  auth.py  buddy_graph.py  discovery.py  events.py  ideas.py  ingestion.py  library.py  paper_rag.py  profile.py  reading.py  research_chat.py  scheduling.py  verification.py  wellbeing.py
src/phd_buddy/static/: app.js  index.html  styles.css
src/phd_buddy/storage/: __init__.py  db.py  models.py  vault.py
tests/: test_agent_orchestration.py  test_onboarding.py  test_paper_buddy.py  test_web.py
