[project]
name = "phd-buddy"
version = "0.1.0"
description = "A PhD research buddy for onboarding, literature discovery, and grounded paper deep dives."
readme = "README.md"
authors = [
    { name = "Juno Wang", email = "congyingwang0907@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn>=0.49.0",
]

[project.scripts]
phd-buddy = "phd_buddy.cli:main"

[tool.uv.build-backend]
module-root = "src"
module-name = "phd_buddy"
source-include = ["src/phd_buddy/static/**"]

[dependency-groups]
dev = [
    "httpx2>=2.5.0",
    "pytest>=8.4.1",
]

[build-system]
requires = ["uv_build>=0.11.21,<0.12.0"]
build-backend = "uv_build"
